--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   cypress-e2e-electron:
     runs-on: ubuntu-latest
+    container:
+        image: cypress/browsers:node18.12.0-chrome103-ff107
+        options: --user 1001
     steps:
       - name: Get code
         uses: actions/checkout@v4.1.7
@@ -20,6 +23,48 @@ jobs:
           browser: electron
           record: true
           group: UI electron
+          spec: ${{ github.event.inputs.spec }}
+        env:
+          CYPRESS_RECORD_KEY: b335296a-dfa5-493d-8988-16d6e9b7aa0e
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cypress-e2e-chrome:
+      needs: cypress-e2e-electron
+      runs-on: ubuntu-latest
+      container:
+        image: cypress/browsers:node18.12.0-chrome103-ff107
+        options: --user 1001
+      steps:
+        - name: Get code
+          uses: actions/checkout@v4.1.7
+  
+        - name: Cypress run
+          uses: cypress-io/github-action@v6.5.0
+          with:
+            install-command: yarn install
+            browser: chrome
+            record: true
+            group: UI chrome
+            spec: ${{ github.event.inputs.spec }}
+          env:
+            CYPRESS_RECORD_KEY: b335296a-dfa5-493d-8988-16d6e9b7aa0e
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  cypress-e2e-firefox:
+    needs: cypress-e2e-electron
+    runs-on: ubuntu-latest
+    container:
+        image: cypress/browsers:node18.12.0-chrome103-ff107
+        options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4.1.7
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6.5.0
+        with:
+          install-command: yarn install
+          browser: firefox
+          record: true
+          group: UI firefox
           spec: ${{ github.event.inputs.spec }}
         env:
           CYPRESS_RECORD_KEY: b335296a-dfa5-493d-8988-16d6e9b7aa0e
